lib/cache_model/treetop/sql_where_condition.treetop
grammar SQLWhereCondition
  include SQLKeyValuePair

  rule where_condition
    "WHERE" space+ where_clause {
       def eval
         where_clause.eval
       end
     }
  end

  rule where_clause
    open_parens optional_spaces where_clause optional_spaces close_parens {
      def eval
        where_clause.eval
      end
    }
    /
    clause1:single_expression_where_clause      space+ 
            disjunction_or_conjunction_joiner   space+ 
    clause2:where_clause {
      def eval
        klass = CachedModel::Expression.find_class_for(disjunction_or_conjunction_joiner.eval)
        klass.new(clause1.eval, clause2.eval)
      end
    } 
    / 
    single_expression_where_clause
  end

  rule disjunction_or_conjunction_joiner
    and / or
  end

  rule and
    "AND" { def eval; :AND; end }
  end

  rule or
    "OR" { def eval; :OR; end }
  end

  rule open_parens
    "("
  end

  rule close_parens
    ")"
  end

  rule single_expression_where_clause
    key_value_pair
  end
end
